# bench-sales-agent

./: .claude-context-summary.md  .claude-heartbeat-save.md  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  bench-agent.spec  c2c_live_results.py  c2c_sample.py  demo.py  docker-compose.yml  live_results.py  pyproject.toml
.claude/: settings.local.json
config/: settings.toml
scripts/: install-macos.sh  install-windows.bat
src/bench_sales_agent/: __init__.py  agent.py  cli.py
src/bench_sales_agent/data/: database.py
src/bench_sales_agent/models/: consultant.py  job.py  vendor.py
src/bench_sales_agent/search/: job_board_urls.py  web_search.py  xray_engine.py
src/bench_sales_agent/templates/: emails.py
src/bench_sales_agent/web/: app.py
src/bench_sales_agent/web/routes/: chat.py  consultants.py  dashboard.py  emails.py  jobs.py  market.py  search.py  submissions.py  vendors.py
src/bench_sales_agent/web/templates/: base.html  chat.html  chat_response.html  dashboard.html  market.html  market_result.html
src/bench_sales_agent/web/templates/consultants/: _analysis.html  add.html  detail.html  list.html
src/bench_sales_agent/web/templates/emails/: _preview.html  index.html
src/bench_sales_agent/web/templates/jobs/: _match_results.html  add.html  list.html
src/bench_sales_agent/web/templates/search/: _results.html  index.html
src/bench_sales_agent/web/templates/submissions/: list.html
src/bench_sales_agent/web/templates/vendors/: add.html  list.html
tests/: test_cli_helpers.py  test_database.py  test_models.py  test_xray_engine.py
