[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bench-sales-agent"
version = "1.0.0"
description = "AI-powered Bench Sales Agent with advanced X-ray search capabilities"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "jinja2>=3.1.3",
    "python-dateutil>=2.8.2",
    "tinydb>=4.8.0",
    "beautifulsoup4>=4.12.0",
    "click>=8.1.7",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]

[project.scripts]
bench-agent = "bench_sales_agent.cli:main"
bench-agent-web = "bench_sales_agent.web.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bench_sales_agent" = ["web/templates/**/*.html"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
